// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItemLink should render correctly 1`] = `
<div>
  <li
    role="none"
  >
    <a
      class="rmd-list-item rmd-list-item--clickable rmd-list-item--link rmd-menu-item"
      href="#"
      role="menuitem"
      tabindex="-1"
    >
      ItemLink 1
      <span
        class="rmd-ripple-container"
      />
    </a>
  </li>
</div>
`;

exports[`MenuItemLink should render correctly 2`] = `
<div>
  <li
    role="none"
  >
    <a
      class="rmd-list-item rmd-list-item--clickable rmd-list-item--link rmd-list-item--medium rmd-menu-item"
      href="#"
      id="menu-item-1"
      role="menuitem"
      tabindex="-1"
    >
      <i
        class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        icon
      </i>
      ItemLink 1
      <span
        class="rmd-ripple-container"
      />
    </a>
  </li>
</div>
`;
